bisonc++ (2.8.0)

  * Grammars having states consisting of items in which a reduction from a
    (series of) non-terminals is indicated have automatically a higher
    precedence than items in which a shift is required. Therefore, in these
    cases the shift/reduce conflict is solved by a reduce, rather than a
    shift.  See README.states-and-conflicts, srconflict/visitreduction.cc and
    the Bisonc++ manual, section 'Rule precedence' for examples and further
    information.  These grammars are now showing S/R conflicts, which remained
    undetected in earlier versions of Bisonc++. The example was brought to my
    attention by Ramanand Mandayam (thanks, Ramanand!).

  * To the set of regression tests another test was added containing a grammar
    having two S/R conflicts resulting from automatically selecting reductions
    rather than shifts. This test was named 'mandayam'.

  * Output generated by --verbose and --construction now shows in more detail
    how S/R conflicts are handled. The Bisonc++ manual also received an
    additional section explaining when reduces are used with certain S/R
    conflicts. 

  * Previously the documentation stated that --construction writes the
    construction process to stdout, whereas it is written to the same file as
    used by --verbose. This is now repaired.

  * The meaning/use of the data members of all classes are now described at
    the data members in all the classes' header files.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 08 Aug 2010 15:15:46 +0200


bisonc++ (2.7.0)

  * $-characters appearing in strings or character constants in action blocks 
    no longer cause warnings about incorrect or negative $-indices

  * Repaired incorrect interpretation of '{' and '}' character constants 
    in action blocks.

  * Added option --print (directive %print) displaying tokens received by the
    scanner used by the generated parser.
